--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "backend-example-2",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,9 +14,11 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongod": "^2.0.0",
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "description": ""
 }
